# OCplusplus

./: CMakeLists.txt
include/: Debye.h  TPparser.h  UI.h  configuration.h  electronic.h  elements.h  ev.h  fv.h  harmonic.h  magnetic.h  math_utils.h  phases.h  physconsts.h  qha.h  readabinitio.h  readtdb.h  references.h  species.h  structure.h  systems.h  tpfunctions.h  types.h  utils.h  y.h
src/: Debye.cpp  TPparser.cpp  UI.cpp  configuration.cpp  electronic.cpp  elements.cpp  ev.cpp  fv.cpp  harmonic.cpp  magnetic.cpp  main.cpp  math_utils.cpp  phases.cpp  qha.cpp  readabinitio.cpp  readtdb.cpp  references.cpp  species.cpp  structure.cpp  systems.cpp  tpfunctions.cpp  types.cpp  utils.cpp  y.cpp
tests/: Al-Ni.TDB  auin_liu.tdb  crfemo.tdb  out.TDB  structures_database  test.tdb  test_Debye.cpp  test_configurations.cpp  test_electronic.cpp  test_elements.cpp  test_ev.cpp  test_harmonic.cpp  test_magnetic.cpp  test_phases.cpp  test_qha.cpp  test_readabinitio.cpp  test_readtdb.cpp  test_references.cpp  test_species.cpp  test_structures.cpp  test_systems.cpp  test_tpfunctions.cpp  test_types.cpp  test_y.cpp
